--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "httpx>=0.25.2", # Async HTTP client
     "uvicorn>=0.34.2",
     "pillow>=11.2.1",
+    "starlette>=0.46.2",
 ]
 
 [build-system]
