--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "uvicorn>=0.34.2",
     "pillow>=11.2.1",
     "starlette>=0.46.2",
+    "pyclean>=3.1.0",
 ]
 
 [build-system]
