--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "django-encrypted-model-fields>=0.6.5",
     "icalendar>=6.1.3",
     "pytz>=2025.2",
+    "pip>=25.1.1",
 ]
 
 [build-system]
