--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,11 @@ dependencies = [
     "cleanpy>=0.5.1",
     "python-dotenv>=1.1.0",
     "django-encrypted-model-fields>=0.6.5",
-    "icalendar>=6.1.3",
+    "icalendar>=6.3.0",
     "pytz>=2025.2",
     "pip>=25.1.1",
     "ruff>=0.11.9",
+    "django-bootstrap5>=25.1",
 ]
 
 [build-system]
