--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "pip>=25.1.1",
     "ruff>=0.11.9",
     "django-bootstrap5>=25.1",
+    "django-formtools>=2.5.1",
 ]
 
 [build-system]
